# ArmNeonOptimization

./: .gitmodules  LICENSE  README.md
ConstantTimeMedianFilter/: CMakeLists.txt  README.md  run_median_filters.cpp
ConstantTimeMedianFilter/images/: add_noise.py
ConstantTimeMedianFilter/scripts/: build_android.sh  run_filters.sh  run_filters_android.sh
ConstantTimeMedianFilter/src/: CMakeLists.txt  constant_time_median_filter_uint16.cpp  constant_time_median_filter_uint16.h  normal_median_filter_float.cpp  normal_median_filter_float.h  normal_median_filter_uint16.cpp  normal_median_filter_uint16.h
ConstantTimeMedianFilter/unit_test/: CMakeLists.txt  test_median_filter.cpp
armAssembly/: CMakeLists.txt  README.md  assemblyEx1ArrWeightSum.cpp  assemblyEx2Rgb2Gray.cpp
armAssembly/datas/disassemble_files/: assemblyEx1ArrWeightSum_arm64-v8a.txt  assemblyEx1ArrWeightSum_armeabi-v7a.txt  assemblyEx2Rgb2Gray_arm64-v8a.txt  assemblyEx2Rgb2Gray_armeabi-v7a.txt
armAssembly/scripts/: build_android.sh
boxFilter/: CMakeLists.txt  README.md  build_android.sh
boxFilter/src/: CMakeLists.txt  boxFilter.cpp  boxFilter.h
boxFilter/unit_test/: CMakeLists.txt  testBoxFilter.cpp
cpuAffinityExperiments/: CMakeLists.txt  README.md  getCPUid.cpp
cpuAffinityExperiments/scripts/: build_android.sh
sideWindowBoxFilter/: CMakeLists.txt  README.md  compare.cpp
sideWindowBoxFilter/images/: add_noise.py
sideWindowBoxFilter/scripts/: build_android.sh  run_compare.sh
sideWindowBoxFilter/src/: CMakeLists.txt  box_filter.cpp  box_filter.h  side_window_box_filter.cpp  side_window_box_filter.h
sideWindowBoxFilter/unit_test/: CMakeLists.txt  gtest.cpp  test_side_window_box_filter.cpp
sideWindowMedianFilter/: CMakeLists.txt  README.md  compare.cpp
sideWindowMedianFilter/scripts/: build_android.sh  build_linux.sh  run_compare.sh  run_compare_android.sh
sideWindowMedianFilter/src/: CMakeLists.txt  median_filter.cpp  median_filter.h  side_window_median_filter.cpp  side_window_median_filter.h
sideWindowMedianFilter/unit_test/: CMakeLists.txt  test_side_window_median_filter.cpp
